--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-draggable": "^4.4.6",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
