--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pet-grooming-app",
   "version": "0.1.0",
-  "homepage": "https://benjamenja.github.io/pet-grooming-app",
+  "homepage": "https://benjamenja.github.io/imgd4600-pet-grooming-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
